src/objects/Quality_review__c.object
<CustomObject>
    <description>This object contains all the details about the quality review.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The account of the opportunity.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quality reviews</relationshipLabel>
        <relationshipName>Quality_reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_review__c</fullName>
        <description>The date when the review is expected.</description>
        <label>Data review</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional information.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <description>The Opportunity code.</description>
        <label>Opportunity ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The parent opportunity related to the Quality review.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quality reviews</relationshipLabel>
        <relationshipName>Quality_reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The owner of the opportunity.</description>
        <label>Opportunity owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Quality_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quality manager for the review. Refers to Project manager object</description>
        <inlineHelpText>If this field is empty will be filled automatically with the PM Quality manager of the opportunity</inlineHelpText>
        <label>PM Quality manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Manager__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Manager__c</referenceTo>
        <relationshipLabel>Quality reviews</relationshipLabel>
        <relationshipName>Quality_reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_status__c</fullName>
        <description>The actual status of the review.</description>
        <label>Review status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Not Relevant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quality review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_owner__c</columns>
        <columns>PM_Quality_manager__c</columns>
        <columns>Data_review__c</columns>
        <columns>Review_status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quality review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Opp_QR_flag_mandatory_for_creation</fullName>
        <active>true</active>
        <description>Quality review flag on opportunity must be active in order to create a quality review record</description>
        <errorConditionFormula>AND(ISNEW(), Opportunity__r.Quality_review__c = FALSE)</errorConditionFormula>
        <errorMessage>Before creating quality review records you need to activate &quot;Quality review&quot; flag in current opportunity</errorMessage>
    </validationRules>
</CustomObject>